# herb_game

./: CREDITS.md  CREDITS.txt  Cargo.toml  README.md
src/: alchemy.rs  elements.rs  herbs.rs  knowledge.rs  lib.rs  main.rs  potions.rs  region.rs  world.rs
www/: .gitignore  index.html  package.json  pnpm-lock.yaml
www/src/: main.ts  style.css
