[package]
name = "herb_game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
enum-map = {version="2.7.3", features=["serde"]}
getrandom = {version="0.4.3", features=["wasm_js"]}
once_cell = "1.21.4"
rand = "0.10.1"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28.0"
wasm-bindgen = "0.2.125"
